# EklavyaEngine

./: .clang-format  .gitignore  CMakeLists.txt  README.md  generate_executable.sh  generate_project.sh  generate_scene.sh
Demos/FPSDemo/: FPSDemo.cpp  FPSDemo.hpp
Demos/FrustumCulling/: FrustumCullingDemo.cpp  FrustumCullingDemo.h
Demos/InertiaTensorTorqueTest/: InertiaTensorTorqueTestDemo.cpp  InertiaTensorTorqueTestDemo.h
Demos/Shadows/: ShadowsDemo.cpp  ShadowsDemo.h
Demos/SkeletalAnimation/: SkeletalAnimationDemo.cpp  SkeletalAnimationDemo.hpp
Demos/SkeletalAnimationWithIK/: PlayerController.cpp  PlayerController.hpp  SkeletalAnimationWithIK.cpp  SkeletalAnimationWithIK.hpp
Demos/SphereCastDemo/: SphereCastDemo.cpp  SphereCastDemo.hpp
Demos/StackOfBoxes/: StackOfBoxesDemo.cpp  StackOfBoxesDemo.hpp
Demos/TPSDemo/: PlayerController.cpp  PlayerController.hpp  TPSDemo.cpp  TPSDemo.hpp
Demos/VehiclePhysicsDemo/: CarComponent.cpp  CarComponent.hpp  CarSuspension.cpp  CarSuspension.hpp  VehiclePhysicsDemo.cpp  VehiclePhysicsDemo.hpp
EklavyaEngine/: Bone.cpp  Director.cpp  Director.hpp  EkAudio.cpp  EkAudio.hpp  GLFWGame.cpp  GLFWGame.h  Globals.cpp  Globals.h  Helpers.h  InputHandler.cpp  InputHandler.h  Main.cpp  MainEntryScene.cpp  MainEntryScene.hpp  ModelLoader.h  Random.cpp  Random.h  Timer.cpp  Timer.h  UserInputListener.h
EklavyaEngine.xcodeproj/: project.pbxproj
EklavyaEngine.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
EklavyaEngine.xcodeproj/project.xcworkspace/xcuserdata/ankitsinghkushwah.xcuserdatad/: UserInterfaceState.xcuserstate  WorkspaceSettings.xcsettings
EklavyaEngine.xcodeproj/project.xcworkspace/xcuserdata/zerosingh.xcuserdatad/: UserInterfaceState.xcuserstate
EklavyaEngine.xcodeproj/xcshareddata/xcschemes/: EklavyaEngine.xcscheme  Match3Test.xcscheme
EklavyaEngine.xcodeproj/xcuserdata/ankitsinghkushwah.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
EklavyaEngine.xcodeproj/xcuserdata/ankitsinghkushwah.xcuserdatad/xcschemes/: xcschememanagement.plist
EklavyaEngine.xcodeproj/xcuserdata/zerosingh.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
EklavyaEngine.xcodeproj/xcuserdata/zerosingh.xcuserdatad/xcschemes/: xcschememanagement.plist
EklavyaEngine/AssetManager/: Animation.cpp  Animation.h  AnimationData.cpp  AnimationData.h  Asset.h  AssetFactory.cpp  AssetFactory.h  AssetManager.cpp  AssetManager.h  Bone.cpp  Bone.h  Cubemap.cpp  Cubemap.h  GLMesh.cpp  GLMesh.hpp  GLModel.cpp  GLModel.hpp  IAsset.cpp  IAsset.h  MaterialInfo.h  ShaderProgram.cpp  ShaderProgram.h  Texture2D.cpp  Texture2D.h  VertexArrayObject.cpp  VertexArrayObject.h
EklavyaEngine/Components/: AnimationComponent.cpp  AnimationComponent.h  AnimationIKSolverComponent.cpp  AnimationIKSolverComponent.hpp  ComponentIds.h  EkComponent.cpp  EkComponent.hpp  GameActor.cpp  GameActor.h  RenderComponent.cpp  RenderComponent.hpp  TransformComponent.cpp  TransformComponent.h
EklavyaEngine/CoreUtils/: EkUtils.cpp  EkUtils.hpp  Logger.cpp  Logger.h  Singleton.h
EklavyaEngine/EkPhysics/: Collider.cpp  Collider.h  CollisionDetector.cpp  CollisionDetector.h  CollisionSystem.cpp  CollisionSystem.h  Constraint.cpp  Constraint.h  ContactGenerator.cpp  ContactGenerator.h  EkBody.cpp  EkBody.h  PhysicsWorld.cpp  PhysicsWorld.h
EklavyaEngine/EkPhysics/Constraints/: Constraint.h  ContactConstraint.cpp  ContactConstraint.h
EklavyaEngine/Event/: EventDispatcher.cpp  EventDispatcher.h  EventType.h  Events.h
EklavyaEngine/Renderer/: DebugRenderer.cpp  DebugRenderer.hpp  Framebuffer.cpp  Framebuffer.hpp  GLRenderer.cpp  GLRenderer.h  Material.cpp  Material.h  RenderPass.cpp  RenderPass.hpp
EklavyaEngine/Scene/: BoundingVolume.cpp  BoundingVolume.h  EkActor.cpp  EkActor.h  EkMaterial.cpp  EkMaterial.hpp  EkScene.cpp  EkScene.h  SceneDebugger.cpp  SceneDebugger.hpp  SceneHelper.cpp  SceneHelper.hpp  SpringFollowCamera.cpp  SpringFollowCamera.hpp
EklavyaEngine/Scene/Cameras/: FreeLookCamera.cpp  FreeLookCamera.h  Frustum.cpp  Frustum.h  ICamera.cpp  ICamera.hpp  SpringFolllowCamera.cpp  SpringFolllowCamera.h
Resources/bitmap fonts/: Consolas.fnt  gothic.fnt
Resources/models/characters/fps_hands/: Reload.fbx  fps_hands.fbx
Resources/models/characters/new_soldier/: new_soldier.gltf
Resources/models/characters/player/aiming/: down.fbx  up.fbx
Resources/models/characters/player/jumping/: flight.fbx  (+2 more)
Resources/models/characters/swat/: idle.dae  run.dae
Resources/models/levels/: level0.fbx
Resources/models/tree/: license.txt  scene.gltf
Resources/models/truck/: chassis.gltf  tire.gltf  tire2.gltf
Resources/models/truck/tire_2/: tire2.gltf
Resources/shaders/: anim_model_fs.glsl  anim_model_vs.glsl  circle_fs.glsl  circle_vs.glsl  debug_depth_fs.glsl  entity_inst_fs.glsl  entity_inst_vs.glsl  main_output_fs.glsl  main_output_vs.glsl  outlined_fs.glsl  outlined_vs.glsl  shadow_map_fs.glsl  shadow_map_vs.glsl  skybox_fs.glsl  skybox_vs.glsl  sprite_renderer_fs.glsl  sprite_renderer_vs.glsl  standard_brdf_fs.glsl  standard_brdf_vs.glsl  standard_fs.glsl  standard_vs.glsl  text_fs.glsl  text_renderer_fs.glsl  text_renderer_vs.glsl  text_vs.glsl  unlit_solids_fs.glsl  unlit_solids_vs.glsl  water_fs.glsl  water_pass_fs.glsl  water_pass_vs.glsl  water_vs.glsl  world_point_fs.glsl  world_point_vs.glsl
Resources/shaders/lit shaders/: lit_batch_renderer_fs.glsl  lit_batch_renderer_vs.glsl  lit_sprite_renderer_fs.glsl  lit_sprite_renderer_vs.glsl
SceneTemplate/: SceneTemplate.cpp  SceneTemplate.h
(+18 files in other folders)
